# small_engine

./: Cargo.toml
src/: app.rs  camera.rs  constants.rs  debug_menu.rs  debug_state.rs  equirectangular.wgsl  example.rs  handler.rs  hdr.rs  hdr.wgsl  input.rs  lib.rs  lighting.rs  main.rs  resources.rs  shader.wgsl  sky.wgsl  state.rs
src/core/: mod.rs  world.rs
src/core/entity/: mod.rs  spatial_transform.rs
src/gpu/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/graphics/: constants.rs  mod.rs
src/graphics/gpu/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/graphics/render/: assets.rs  commands.rs  hdr.rs  mod.rs  renderer.rs
src/graphics/render/renderable/: mod.rs  model.rs  skybox.rs  sprite.rs
src/graphics/scene/: instance_buffer.rs  lighting.rs  mod.rs  node.rs  raw_spatial_transform.rs  spatial_transform.rs
src/graphics/scene/camera/: mod.rs  ortho.rs  perspective.rs
src/graphics/scene/light/: point.rs
src/graphics/textures/: cube.rs  depth.rs  mod.rs  standard.rs
src/input/: state.rs
src/render/: assets.rs  commands.rs  mod.rs  renderer.rs  scene.rs
src/render/model/: instance.rs  instances.rs  mod.rs
src/render/renderable/: mod.rs
src/render/renderable/model/: instance.rs  mod.rs
src/resources/: general.rs  hdr.rs  mod.rs
src/scene/: instance_buffer.rs  mod.rs  node.rs  spacial_transform.rs
src/scene/camera/: mod.rs  ortho.rs  perspective.rs
src/systems/: mod.rs
src/systems/camera/: mod.rs  ortho.rs  perspective.rs
src/systems/controller/: freecam.rs  mod.rs
(+2 files in other folders)
