[package]
name = "small_engine"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = "1.24.0"
cgmath = "0.18.0"
web-time = "1.1.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
slotmap = "1.0.7"
thiserror = "2.0.17"
kira = "0.11.0"
rustc-hash = "2.1.1"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui = "0.33.3"
egui-winit = "0.33.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "hdr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = { version = "0.11" }
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graphics_project"
path = "src/main.rs"
